<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_picture"
        android:layout_margin="10dp"
        android:layout_gravity="top|center"
        android:contentDescription="@string/profile_picture_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/full_name"
            android:padding="10dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:maxLines="1" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:layout_weight="1" />

        </RadioGroup>


        <TextView
            android:id="@+id/birthDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/save_button_text"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        android:textSize="15sp"
        android:background="#6C63FF"
        android:textColor="#FFFFFF" />


</FrameLayout>