<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_picture"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/profile_picture_description"/>

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/my_full_name"
            android:textSize="30sp"
            android:layout_below="@id/profilePicture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_below="@+id/fullNameTextView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="@string/my_gender"
            android:textSize="20sp"
            android:layout_marginTop="7dp"
            android:drawableStart="@drawable/ic_gender" />

        <TextView
            android:id="@+id/birthdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="@string/my_birthday"
            android:textSize="20sp"
            android:layout_marginTop="7dp"
            android:drawableStart="@drawable/ic_birthday" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="@string/my_email"
            android:textSize="20sp"
            android:layout_marginTop="7dp"
            android:drawableStart="@drawable/ic_email"/>

    </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/editButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/edit_button_text"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        android:textSize="15sp"
        android:background="#6C63FF"
        android:textColor="#FFFFFF" />

</FrameLayout>